[package]
name = "legacy"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.1.0", features = ["legacy", "unit-testing"] }

[dev-dependencies]
near-workspaces = { version = "0.11.0", features = ["unstable"] }
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.120"